--- a/setup.yml
+++ b/setup.yml
@@ -86,15 +86,18 @@
       copy: 
         src: /root/setup
         dest: /root/
-    - name: pull image
-      shell: |
-        docker pull dockerhub.dttt.vn/documentserver:3.0
-        docker pull dockerhub.dttt.vn/etcdkeeper:latest
-        docker pull dockerhub.dttt.vn/imagemagick:latest
     # dowload file stack
     - name: dowload file setup
       shell: |
         git clone https://github.com/dangkhoa0797/setup.git
+        
+    - name: pull image 1
+      command: docker pull dockerhub.dttt.vn/documentserver:3.0
+    - name: pull image 2
+      shell: docker pull dockerhub.dttt.vn/etcdkeeper:latest
+    - name: pull image 3
+      shell: docker pull dockerhub.dttt.vn/imagemagick:latest
+    
     # cai dat portainer
 
     - name: Cai dat Portaier
