--- a/package.yml
+++ b/package.yml
@@ -1,46 +1,47 @@
+---
+- hosts: centos7.1
+  remote_user: root
+  ignore_unreachable: yes
+  ignore_errors: yes  
+  tasks:
     # cai dat cac goi package
     - name: upgrade all packages
-      yum: name=* state=latest
+      command: yum -y update
 
     - name: install epel-release (CentOS)
-      yum:
-        name: epel-release
-        state: present
-        update_cache: yes
-      when: ansible_distribution == "CentOS"
+      command: yum install -y epel-release
 
     - name: Install a list of packages with a list variable
       package:
         name: "{{ packages }}"
         state: present
         update_cache: yes
-      when: ansible_distribution == "Ubuntu" or ansible_distribution == "CentOS"
       vars:
         packages:
         - htop
         - telnet
         - wget
         - curl
-        - cockpit
-        - net-tools
-        - nload
-        - openssh
-        - openssh-server
-        - openssh-clients
-        - openssl-libs
-        - chrony
-
-    - name: Start cockpit service
-      service:
-        name: cockpit
-        state: started
-
-    - name: Start sshd service
-      service:
-        name: sshd
-        state: started
-
-    - name: Start chronyd service
-      service:
-        name: chronyd
-        state: started
+#       - cockpit
+#       - net-tools
+#       - nload
+#       - openssh
+#       - openssh-server
+#       - openssh-clients
+#       - openssl-libs
+#       - chrony
+#
+    #- name: Start cockpit service
+    #  service:
+    #    name: cockpit
+    #    state: started
+    #
+    #- name: Start sshd service
+    #  service:
+    #    name: sshd
+    #    state: started
+    #
+    #- name: Start chronyd service
+    #  service:
+    #    name: chronyd
+    #    state: started
