--- a/package.yml
+++ b/package.yml
@@ -2,7 +2,9 @@
 - hosts: NAME
   remote_user: root
   ignore_unreachable: yes
-  ignore_errors: yes  
+  ignore_errors: yes
+  vars_files:
+    - variables.yml
   tasks:
     # cai dat cac goi package
     - name: update all packages
@@ -14,21 +16,21 @@
         name: "{{ packages }}"
         state: present
         update_cache: yes
-      vars:
-        packages:
-          - htop
-          - telnet
-          - wget
-          - curl
-          - cockpit
-          - net-tools
-          - nload
-          - openssh
-          - openssh-server
-          - openssh-clients
-          - openssl-libs
-          - chrony
-
+#      vars:
+#        packages:
+#          - htop
+#          - telnet
+#          - wget
+#          - curl
+#          - cockpit
+#          - net-tools
+#          - nload
+#          - openssh
+#          - openssh-server
+#          - openssh-clients
+#          - openssl-libs
+#          - chrony
+#
 #    - name: Start cockpit service
 #      service:
 #        name: cockpit
