--- a/variables.yml
+++ b/variables.yml
@@ -1,13 +1,23 @@
-        packages:
-          - htop
-#          - telnet
-#          - wget
-#          - curl
-#          - cockpit
-#          - net-tools
-#          - nload
-#          - openssh
-#          - openssh-server
-#          - openssh-clients
-#          - openssl-libs
-#          - chrony
+packages:
+  - htop
+#      - telnet
+  - wget
+#      - curl
+#      - cockpit
+#      - net-tools
+#      - nload
+#      - openssh
+#      - openssh-server
+#      - openssh-clients
+#      - openssl-libs
+#      - chrony
+ports:
+volumes:
+  - mongo_data
+  - rabbitmq_data
+  - redis_data
+  - rabbitmq_data
+  - etcd_data
+  - sqlserver_data
+networks:
+configs:
