--- a/setup.yml
+++ b/setup.yml
@@ -76,9 +76,6 @@
         yum -y install python3
         yum -y install python3-pip git
         pip3 install --upgrade pip==21.3.1
-      register: ps
-
-    - debug: var=ps.stdout_lines
    
     - name: install docker sdk for python
       shell: |
@@ -130,9 +127,6 @@
       shell: |
         cd ~
         git clone https://github.com/dangkhoa0797/setup.git
-      register: ps
-
-    - debug: var=ps.stdout_lines
         
     - name: pull image 1
       command: docker pull dockerhub.dttt.vn/documentserver:3.0
@@ -140,27 +134,18 @@
       shell: docker pull dockerhub.dttt.vn/etcdkeeper:latest
     - name: pull image 3
       shell: docker pull dockerhub.dttt.vn/imagemagick:latest
-      register: ps
-
-    - debug: var=ps.stdout_lines
     
     # cai dat portainer
 
     - name: Cai dat Portaier
       shell: |
         docker stack deploy -c /root/setup/portainer.yml portainer
-      register: ps
-
-    - debug: var=ps.stdout_lines
 
     - name: Cai dat traefik
       shell: |
         docker volume create ssl
         docker network create -d overlay traefik_main
         docker stack deploy -c /root/setup/traefik.yml traefik
-      register: ps
-
-    - debug: var=ps.stdout_lines
 
     - name: Tao volume
       shell: |
@@ -170,33 +155,18 @@
         docker volume create rabbitmq_data
         docker volume create etcd_data
         docker volume create sqlserver_data
-      register: ps
-
-    - debug: var=ps.stdout_lines
         
      # tao net work   
     - name: Tao network
       shell: |
         docker network create infrastructure -d overlay
-      register: ps
-
-    - debug: var=ps.stdout_lines
     
     - name: config redis
       shell: |
         echo "user root on allkeys allchannels allcommands >VgJyAzye2YZIz3nT
         user default off" | docker config create redis.conf -
-      register: ps
-
-    - debug: var=ps.stdout_lines
 
     - name: Cai dat infrastructure
       shell: |
         docker stack deploy -c /root/setup/infrastructure.yml infra
-      register: ps
-
-    - debug: var=ps.stdout_lines
-    - name: Restart service docker, in all cases
-      ansible.builtin.service:
-        name: docker
-        state: restarted
+        systemctl restart docker
