--- a/setup.yml
+++ b/setup.yml
@@ -54,33 +54,6 @@
         state: started
         enabled: yes
       become: yes
-    
-#    - name: Insert data to daemon.json
-#      shell: |
-#        printf '{
-#           "insecure-registries": [
-#             "dockerhub.dttt.vn"
-#             ],
-#           "data-root":"/root/docker",
-#           "log-driver": "json-file",
-#           "log-opts": {
-#             "max-size": "10m",
-#             "max-file": "3"
-#           },
-#           "metrics-addr": "0.0.0.0:9323"
-#        }' > /etc/docker/daemon.json
-#        systemctl restart docker
-
-#    - name: install python 3
-#      shell: |
-#        yum -y install python3
-#        yum -y install python3-pip git
-#        pip3 install --upgrade pip==21.3.1
-#   
-#    - name: install docker sdk for python
-#      shell: |
-#        pip install docker
-#        pip install docker-compose
 
     - name: Cai dat docker swarm
       shell: |
@@ -105,18 +78,18 @@
         firewall-cmd --zone=public --add-port=2022/tcp --permanent					
         firewall-cmd --reload
         firewall-cmd --zone=public --list-ports
-        yum -y install net-tools
-        yum -y update
-        sed -i "s,#Port 22,Port 2022," /etc/ssh/sshd_config
-        firewall-cmd --zone=public --list-ports
-        sed -i "s,SELINUX=.*,SELINUX=disabled," /etc/selinux/config
-        setenforce 0
-        systemctl restart sshd
+    #    yum -y install net-tools
+    #    yum -y update
+    #    sed -i "s,#Port 22,Port 2022," /etc/ssh/sshd_config
+    #    firewall-cmd --zone=public --list-ports
+    #    sed -i "s,SELINUX=.*,SELINUX=disabled," /etc/selinux/config
+    #    setenforce 0
+    #    systemctl restart sshd
         systemctl restart docker
     #  register: ps
     #
     #- debug: var=ps.stdout_lines
-    # sed -i 's/^SELINUX=.*/SELINUX=permissive/g' /etc/selinux/config
+    
     # copy file stack infrastructure
     #- name: Copy file stack infrastructure
     #  copy: 
@@ -170,4 +143,3 @@
     - name: Cai dat infrastructure
       shell: |
         docker stack deploy -c /root/setup/infrastructure.yml infra
-        systemctl restart docker
