--- a/setup.yml
+++ b/setup.yml
@@ -97,10 +97,13 @@
     #    src: /root/setup
     #    dest: /root/
     # dowload file stack
-    - name: dowload file setup
-      shell: |
-        cd ~
-        git clone https://github.com/dangkhoa0797/setup.git
+    - name: Clone a github repository
+      git:
+        repo: https://github.com/dangkhoa0797/setup.git
+        dest: /root/setup
+        clone: yes
+        update: yes
+      tags: git
         
     - name: pull image 1
       command: docker pull dockerhub.dttt.vn/documentserver:3.0
