--- a/setup.yml
+++ b/setup.yml
@@ -92,14 +92,10 @@
     #- debug: var=ps.stdout_lines
     
     # copy file stack infrastructure
-    #- name: Copy file stack infrastructure
-    #  copy: 
-    #    src: /root/setup
-    #    dest: /root/
-    # dowload file stack
-    - name: Clone a github repository
-      command: git clone https://github.com/dangkhoa0797/setup.git
-      tags: git
+    - name: Copy file stack infrastructure
+      copy: 
+        src: /ansible/setup
+        dest: /root/
         
     - name: pull image 1
       command: docker pull dockerhub.dttt.vn/documentserver:3.0
