--- a/setup.yml
+++ b/setup.yml
@@ -62,6 +62,7 @@
     #  tags: cp
     - name: clone infra
       shell: git clone https://github.com/dangkhoa0797/setup.git
+      tags: git
         
     #- name: pull image 1
     #  command: docker pull dockerhub.dttt.vn/documentserver:3.0
