--- a/setup.yml
+++ b/setup.yml
@@ -31,6 +31,10 @@
       register: ps
 
     - debug: var=ps.stdout_lines
+
+    - name: cai dat git
+      shell: yum install git
+      tags: git
         
     - name: set up firewall
       shell: |
@@ -62,7 +66,7 @@
     #  tags: cp
     - name: clone infra
       shell: git clone https://github.com/dangkhoa0797/setup.git
-      tags: git
+      tags: clone
         
     #- name: pull image 1
     #  command: docker pull dockerhub.dttt.vn/documentserver:3.0
