--- a/setup.yml
+++ b/setup.yml
@@ -95,14 +95,20 @@
       register: ps
 
     - debug: var=ps.stdout_lines
-        
+    - name: Add port to firewalld
+      firewalld:
+        port: "{{ item }}"
+        permanent: yes
+        state: enabled
+      loop:
+        - 2376/tcp
+        - 2377/tcp
+        - 4789/tcp
+        - 7946/tcp
+        - 2022/tcp
+        - 9001/tcp        
     - name: set up firewall
-      shell: |
-        firewall-cmd --zone=public --add-port=2376/tcp --permanent					
-        firewall-cmd --zone=public --add-port=2377/tcp --permanent					
-        firewall-cmd --zone=public --add-port=4789/udp --permanent										
-        firewall-cmd --zone=public --add-port=7946/tcp --add-port=9001/tcp --permanent
-        firewall-cmd --zone=public --add-port=2022/tcp --permanent					
+      shell: |					
         firewall-cmd --reload
         systemctl restart docker
     #    firewall-cmd --zone=public --list-ports
